--- a/src/PushStream6.PerformanceTest/PushStream6.PerformanceTest.fsproj
+++ b/src/PushStream6.PerformanceTest/PushStream6.PerformanceTest.fsproj
@@ -18,6 +18,7 @@
   <ItemGroup>
     <ProjectReference Include="..\PushStream6.Benchmark\PushStream6.Benchmark.csproj" />
     <ProjectReference Include="..\PushStream6\PushStream6.fsproj" />
+    <ProjectReference Include="..\PumpStream6\PumpStream6.fsproj" />
   </ItemGroup>
 
 </Project>
