--- a/src/PushStream6.FunctionalTest/PushStream6.FunctionalTest.fsproj
+++ b/src/PushStream6.FunctionalTest/PushStream6.FunctionalTest.fsproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="PumpStreamProperties.fs" />
+    <Compile Include="PushStreamProperties.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
@@ -16,6 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\PushStream6\PushStream6.fsproj" />
+    <ProjectReference Include="..\PumpStream6\PumpStream6.fsproj" />
   </ItemGroup>
 
 </Project>
